--- a/src/main/resources/styles/forum.css
+++ b/src/main/resources/styles/forum.css
@@ -4,8 +4,11 @@
 }
 
 .header {
-    -fx-background-image: url("@images/team-2.jpg");
+    -fx-background-image:
+            linear-gradient(rgba(15, 66, 41, 0.6), rgba(15, 66, 41, 0.6)),
+            url("../images/team-2.jpg");
     -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
 }
 
