--- a/src/main/resources/BaseAdmin.fxml
+++ b/src/main/resources/BaseAdmin.fxml
@@ -14,6 +14,7 @@
     <stylesheets>
         <URL value="@baseAdmin.css" />
     </stylesheets>
+    <Label fx:id="sceneReference" visible="false" />
 
 
     <!-- ======= HEADER ======= -->
@@ -30,7 +31,7 @@
                 <MenuButton fx:id="userMenuButton">
                     <items>
                         <MenuItem fx:id="profilMenuItem" text="Profil"/>
-                        <MenuItem text="Déconnexion"/>
+                        <MenuItem fx:id="logoutItem" text="Déconnexion"/>
                     </items>
                 </MenuButton>
             </children>
@@ -80,7 +81,7 @@
         </VBox>
     </left>
 
-    <!-- ======= CENTER (changeable) ======= -->
+
     <center>
         <Label text="Bienvenue sur RecyConnect" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
     </center>
